<resources>
    <string name="app_name">Tokio2020</string>
    <string name="Get_Songs">Get Songs</string>
    <string name="Artist_Name">Artist</string>
    <string name="Track_ID">Track ID</string>
    <string name="Collection_Name">Collection Name</string>
    <string name="Track_Name">Track Name</string>
    <string name="Download">Download</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="type_Medal">Type Medal</string>
    <string name="Get_Medals_By_Event">Get Medals By Event</string>
    <string name="Get_Data_Medals_By_Country">Get Data Medals By Country</string>
    <string name="Country">Country</string>
    <string name="Gold">Gold</string>
    <string name="Silver">Silver</string>
    <string name="Bronze">Bronze</string>
    <string name="Sport_Event">Sport Event</string>
    <string name="Back">Back</string>
</resources>